--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,11 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+
+  gs-grey:    #1D1C1D,
+  gs-text:    #D2D2D2,
+  gs-orange:  #F47621
 );
 
 
